Reactions: Fix overflow with buttons; Interactions: Handle Saved Messages (#1675)

--- a/src/components/middle/message/Reactions.scss
+++ b/src/components/middle/message/Reactions.scss
@@ -47,6 +47,8 @@
 
     &.chosen {
       border-color: var(--accent-color);
+      position: relative;
+      z-index: 1;
     }
 
     &:hover {
